crates/sifr_python_parser/tests/snapshots/invalid_syntax@statements__with__unclosed_ambiguous_lpar.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/invalid/statements/with/unclosed_ambiguous_lpar.py
---
## AST

```
Module(
    ModModule {
        range: 0..14,
        body: [
            With(
                StmtWith {
                    range: 0..14,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 5..6,
                            context_expr: Name(
                                ExprName {
                                    range: 6..6,
                                    id: "",
                                    ctx: Invalid,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                range: 9..14,
                                value: BinOp(
                                    ExprBinOp {
                                        range: 9..14,
                                        left: Name(
                                            ExprName {
                                                range: 9..10,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                range: 13..14,
                                                id: "y",
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | with (:
  |       ^ Syntax Error: Expected an expression
2 | 
3 | x + y
  |


  |
1 | with (:
2 | 
3 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
